product details page created

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -65,7 +65,7 @@
 
 .productImage img {
   height: 10rem;
-  width: 10rem;
+  width: 12rem;
   cursor: pointer;
 }
 
@@ -135,6 +135,7 @@
 
 .bottomButtons {
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
   gap: 1rem;
   position: absolute;
