--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -44,3 +44,22 @@
   height: 3rem;
   border-radius: 50%;
 }
+
+.cartIcon {
+  position: relative;
+}
+
+.cartCount {
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: #1c6758;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  position: absolute;
+  top: 20%;
+  right: -20%;
+  font-size: 0.7rem;
+}
