--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -52,7 +52,7 @@
 
 .productDiv {
   width: 30%;
-  height: 60%;
+  /* height: 50%; */
   display: flex;
   flex-direction: column;
   align-items: center;
